--- a/Css/main.css
+++ b/Css/main.css
@@ -14,3 +14,10 @@ li a{
 li a:hover{
     background-color: orangered;
 }
+
+
+img {
+    filter: drop-shadow(
+        0 0 10px rgba(0, 0, 0, .8)
+    )
+}
