--- a/Css/main.css
+++ b/Css/main.css
@@ -1,19 +1,50 @@
-* {font-family: Verdana, Geneva, Tahoma, sans-serif;}
-ul{list-style-type: none;
-    overflow: hidden;
-    background-color: #333;    
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    
 }
-li{float: left;}
-.especial{float: right;}
-li a{
-    display: block;
-    color: white;
+
+header {
+    background-color: beige;
+    width: 100%;
+    height: 70%;
+    z-index: 100;
+}
+nav{
+    max-width: 1024px;
+    margin: 0 10px auto;
+}
+header img{
+    /*padding: 10px 10px;*/
+    padding: 10px;
+    
+}
+nav ul{
+    float: right;
+    list-style: none;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;}
-li a:hover{
-    background-color: orangered;
+    vertical-align: top;
+    margin: 25px 35px;
 }
+nav li{
+    list-style-type: none;
+    display: inline;
+
+}
+nav li a {
+    font-size: 1rem;
+    line-height: 70px;
+    padding: 10px 30px;
+    color: black;
+    background-color:rgba(255, 255, 255, 0.2);
+    text-decoration: none;
+}
+nav ul li a:hover{
+    background-color: rgb(255, 153, 0);
+}
+
+
 
 
 img {
