--- a/Css/main.css
+++ b/Css/main.css
@@ -1,15 +1,20 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /*font-family: Verdana, Geneva, Tahoma, sans-serif;*/
+    font-family: "Kode Mono", monospace;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+    
+}
+
+body{
     
 }
 
 header {
-    background-color: beige;
+    background-color: #afeeee;
     width: 100%;
     height: 70%;
-    z-index: 100;
 }
 nav{
     max-width: 1024px;
@@ -25,7 +30,7 @@ nav ul{
     list-style: none;
     text-align: center;
     vertical-align: top;
-    margin: 25px 35px;
+    margin: 1rem 1rem;
 }
 nav li{
     list-style-type: none;
@@ -33,18 +38,26 @@ nav li{
 
 }
 nav li a {
+
+    text-decoration: none;
     font-size: 1rem;
     line-height: 70px;
     padding: 10px 30px;
     color: black;
-    background-color:rgba(255, 255, 255, 0.2);
-    text-decoration: none;
+    transition: 0.3s;
+    text-transform: uppercase;
 }
 nav ul li a:hover{
-    background-color: rgb(255, 153, 0);
+    /*background-color: rgb(255, 153, 0);*/
+    color: white;
+    font-weight: bold;
+
 }
 
-
+.Titulo {
+    color: paleturquoise;
+    font-weight: bold;
+}
 
 
 img {
