--- a/Css/main.css
+++ b/Css/main.css
@@ -1,67 +1,106 @@
 * {
     /*font-family: Verdana, Geneva, Tahoma, sans-serif;*/
     font-family: "Kode Mono", monospace;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     
 }
-
 body{
-    
+    background: #afeeee;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    /*min-height: 100vh;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    background-color: red;
 }
 
 header {
-    background-color: #afeeee;
+    position: absolute;
+   /* background-color: #afeeee;*/
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 70%;
+    padding: 20px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    background-color: yellow;
 }
-nav{
-    max-width: 1024px;
-    margin: 0 10px auto;
+
+header .Logo {
+    color: white;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: thistle;
+    padding: 0 10px;
+    font-weight: 600;
 }
-header img{
-    /*padding: 10px 10px;*/
-    padding: 10px;
-    
-}
-nav ul{
-    float: right;
-    list-style: none;
-    text-align: center;
-    vertical-align: top;
-    margin: 1rem 1rem;
-}
-nav li{
-    list-style-type: none;
-    display: inline;
+
+header .navbar{
+    /*position: relative;*/
+    display: flex;
+    align-items: center;
+    background-color: greenyellow;
 
 }
-nav li a {
+
+header .navbar li{
+    list-style-type: none;
+    margin-left: 30px;
+    background-color: blueviolet;
+
+}
+
+header .navbar li a {
 
     text-decoration: none;
     font-size: 1rem;
+    font-weight: 600;
     line-height: 70px;
-    padding: 10px 30px;
+    padding: 10px;
     color: black;
     transition: 0.3s;
     text-transform: uppercase;
 }
 nav ul li a:hover{
-    /*background-color: rgb(255, 153, 0);*/
     color: white;
     font-weight: bold;
-
 }
 
 .Titulo {
-    color: paleturquoise;
+    color: black;
     font-weight: bold;
 }
-
 
 img {
     filter: drop-shadow(
         0 0 10px rgba(0, 0, 0, .8)
     )
+}
+
+.who_png{
+    
+}
+
+.Inicio{
+    font-weight: 800;
+    font-size: xx-large;
+    border-radius: 10px;
+    align-items: center;
+    transition: 0.5s;
+    text-decoration: none;
+    color: black;
+}
+
+.Inicio:hover{
+    background-color: red;
+    color: white;
 }
