--- a/Css/main.css
+++ b/Css/main.css
@@ -8,6 +8,9 @@
 }
 body{
     background: #afeeee;
+    max-width: 1200px;
+    margin: 0 auto;
+    color: #333;
 }
 
 section {
@@ -23,16 +26,16 @@ section {
 
 header {
     position: absolute;
-   /* background-color: #afeeee;*/
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px;
+    padding: 30px 0 40px 0;
     justify-content: space-between;
     display: flex;
     align-items: center;
     background-color: yellow;
 }
+
 
 header .Logo {
     color: white;
@@ -80,7 +83,47 @@ nav ul li a:hover{
     font-weight: bold;
 }
 
+.icon-cart {
+    width: 40px;
+    height: 40px;
+
+}
+
+.container-items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.item {
+    border-radius: 10px;
+
+}
+
+.item:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+}
+
+.info-product {
+    padding: 15px 30px;
+}
+
+.item img {
+    transition: all .8s;
+}
+
+.item:hover img {
+    transform: scale(1.2);
+}
+
+.item figure {
+    overflow: hidden;
+}
+
+
+
 img {
+    max-width: 100%;
     filter: drop-shadow(
         0 0 10px rgba(0, 0, 0, .8)
     )
